# eq-survey-runner-benchmark

./: .coveragerc  .gitignore  .travis.yml  Dockerfile  Makefile  Pipfile  README.md  docker-run.sh  docker_entrypoint.sh  generate_requests.py  locustfile.py  output_distribution.csv  output_requests.csv  output_requests_processed.csv  pyproject.toml  requests.har  run.sh  run_distributed.sh  store_benchmark_outputs.py
ci/: README.md  output-results-to-github.yaml  output-results-to-slack.yaml  output-stats-to-slack.yaml  run-benchmark.yaml  run-incremental-benchmark.yaml  run-locust.yaml
doc/: scale-test-april-2020.md
k8s/: deploy_app.sh
outputs/: get_outputs.py  get_stats.py
requests/: census_household_gb_eng.json  census_individual_gb_eng.json  confirmation_email.json  feedback.json  individual_response.json  test_benchmark_business.json  test_benchmark_business_happy_hub.json  test_benchmark_business_happy_path.json  test_benchmark_business_hub.json  test_benchmark_business_pdfkit.json  test_benchmark_business_pdfkit_optimised.json  test_benchmark_business_survey_url.json  test_benchmark_business_unhappy.json  test_benchmark_business_unhappy_hub_pdf.json  test_benchmark_business_unhappy_path.json  test_benchmark_business_weasy.json  test_checkbox.json  test_feedback.json  test_relationships-household-of-10.json  test_relationships-household-of-20.json  test_relationships-household-of-5.json
runner_benchmark/: __init__.py  har_parser.py  har_replay_test.py  har_taskset.py  questionnaire_mixins.py  taskset.py  token_generator.py  utils.py
tests/: conftest.py  (+6 more)
(+428 files in other folders)
